--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,168 +1,1 @@
-:root {
-  --background-color: #000000;
-  --text-color: #3FDB20;
-  --link-color: #66b3ff;
-  --border-color: #37D20F;
-}
-
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-}
-
-.background-animation {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 0;
-}
-
-.dot {
-    position: absolute;
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    background-color: white;
-    animation: move 3s linear infinite;
-    opacity: 0.4;
-}
-
-.dot:nth-child(1) { left: 10%; top: 100%; animation-delay: 0s; }
-.dot:nth-child(2) { left: 30%; top: 100%; animation-delay: 0.5s; }
-.dot:nth-child(3) { left: 50%; top: 100%; animation-delay: 1s; }
-.dot:nth-child(4) { left: 70%; top: 100%; animation-delay: 1.5s; }
-.dot:nth-child(5) { left: 90%; top: 100%; animation-delay: 2s; }
-.dot:nth-child(6) { left: 20%; top: 100%; animation-delay: 2.5s; }
-.dot:nth-child(7) { left: 40%; top: 100%; animation-delay: 3s; }
-.dot:nth-child(8) { left: 60%; top: 100%; animation-delay: 3.5s; }
-.dot:nth-child(9) { left: 80%; top: 100%; animation-delay: 4s; }
-.dot:nth-child(10) { left: 25%; top: 100%; animation-delay: 4.5s; }
-
-@keyframes move {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-100vh); }
-}
-
-footer,
-header,
-main {
-  padding: 1rem 1.5rem;
-  position: relative;
-  z-index: 1;
-}
-
-nav {
-  margin-bottom: 5rem;
-}
-
-hr {
-  margin: 2rem 0;
-  border-color: var(--border-color);
-}
-
-h1,
-h2,
-sup {
-  text-transform: uppercase;
-}
-
-h2 {
-  font-weight: 500;
-}
-
-form {
-  width: 100%;
-}
-
-thead,
-tr,
-td,
-th {
-  display: inline-block;
-}
-
-nav > img {
-  height: 100px;
-}
-
-dialog > section > code {
-  width: calc(100% - 1.6rem);
-  color: #FF0000;
-}
-
-dialog {
-  top: 5%;
-  max-height: 40vh;
-  color: #FF0000;
-  background-color: #000000;
-  border-color: var(--border-color);
-}
-
-dialog > section > button[type='button'] {
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
-dialog > section > button[type='submit'] {
-  position: absolute;
-  top: 10px;
-  right: 0px;
-  background: none;
-  border: none;
-  font-size: 1em;
-}
-
-dialog > section > button > .copy-icon {
-  font-size: 0.875em;
-  margin-right: 0.25em;
-  position: relative;
-  top: -0.15em;
-  left: -0.125em;
-}
-
-dialog > section > button > span .copy-icon-inner {
-  font-size: 0.875em;
-  position: absolute;
-  top: 0.35em;
-  left: 0.25em;
-}
-
-button {
-  padding: 0.1rem 1rem;
-}
-
-sup > a {
-  text-decoration: underline;
-  color: var(--color-text-primary);
-}
-
-a {
-  color: var(--link-color);
-}
-
-body.blur {
-  filter: blur(5px);
-  transition: filter 0.3s;
-}
-
-details {
-  width: 100%;
-}
-
-input {
-  max-width: 100%;
-}
-
-section > input {
-  max-width: 90%;
-}
-
-body {
-  background-color: var(--background-color);
-  color: var(--text-color);
-}
+:root { --background-color: #000000; --text-color: #3FDB20; --link-color: #66b3ff; --border-color: #37D20F; } body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; } [class~="background-animation"] { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 0; } [class~="dot"] { position: absolute; width: 0.8125rem; height: 0.8125rem; border-radius: 50%; background-color: white; animation: move 3s linear infinite; opacity: 0.4; } [class~="dot"]:nth-child(1) { left: 10%; top: 100%; animation-delay: 0s; } [class~="dot"]:nth-child(2) { left: 30%; top: 100%; animation-delay: 0.5s; } [class~="dot"]:nth-child(3) { left: 50%; top: 100%; animation-delay: 1s; } [class~="dot"]:nth-child(4) { left: 70%; top: 100%; animation-delay: 1.5s; } [class~="dot"]:nth-child(5) { left: 90%; top: 100%; animation-delay: 2s; } [class~="dot"]:nth-child(6) { left: 20%; top: 100%; animation-delay: 2.5s; } [class~="dot"]:nth-child(7) { left: 40%; top: 100%; animation-delay: 3s; } [class~="dot"]:nth-child(8) { left: 60%; top: 100%; animation-delay: 3.5s; } [class~="dot"]:nth-child(9) { left: 80%; top: 100%; animation-delay: 4s; } [class~="dot"]:nth-child(10) { left: 25%; top: 100%; animation-delay: 4.5s; } @keyframes move { 0% { transform: translateY(0); } 100% { transform: translateY(-100vh); } } footer, header, main { padding: 1rem 1.5rem; position: relative; z-index: 1; } nav { margin-bottom: 5rem; } hr { margin: 2rem 0; border-color: var(--border-color); } h1, h2, sup { text-transform: uppercase; } h2 { font-weight: 500; } form { width: 100%; } thead, tr, td, th { display: inline-block; } nav > img { height: 6.25rem; } dialog > section > code { width: calc(100% - 1.6rem); color: #FF0000; } dialog { top: 5%; max-height: 40vh; color: #FF0000; background-color: #000000; border-color: var(--border-color); } dialog > section > button[type='button'] { margin-right: 0.625rem; margin-left: 0.625rem; } dialog > section > button[type='submit'] { position: absolute; top: 0.625rem; right: 0rem; background: none; border: none; font-size: 1em; } dialog > section > button > [class~="copy-icon"] { font-size: 0.875em; margin-right: 0.25em; position: relative; top: -0.15em; left: -0.125em; } dialog > section > button > span [class~="copy-icon-inner"] { font-size: 0.875em; position: absolute; top: 0.35em; left: 0.25em; } button { padding: 0.1rem 1rem; } sup > a { text-decoration: underline; color: var(--color-text-primary); } a { color: var(--link-color); } body[class~="blur"] { filter: blur(0.3125rem); transition: filter 0.3s; } details { width: 100%; } input { max-width: 100%; } section > input { max-width: 90%; } body { background-color: var(--background-color); color: var(--text-color); }
